--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,9 +3,9 @@ name: CI/CD Pipeline
 # Trigger do pipeline
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
   workflow_dispatch: # Permite execução manual
 
 # Variáveis de ambiente globais
@@ -132,7 +132,7 @@ jobs:
     name: 🚀 Deploy (Simulado)
     runs-on: ubuntu-latest
     needs: [test, build, security]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
     environment: production
     
     steps:
